# MuseSynth

./: .gitignore  CMakeLists.txt  config.h.in  msplay.cpp
audiofile/: CMakeLists.txt  audiofile.cpp  audiofile.h
fluid/: CMakeLists.txt  conv.cpp  fluid.cpp  fluid.h  sfont.h  voice.cpp
libmscore/: CMakeLists.txt  xml.h  xmlreader.cpp  xmlwriter.cpp
synthesizer/: CMakeLists.txt  event.cpp  event.h  midipatch.h  synthesizer.h
zerberus/: CMakeLists.txt  filter.cpp  sample.h  sfz.cpp  voice.cpp  zerberus.cpp  zerberus.h  zone.cpp  zone.h
